# napi

./: .gitignore  Cargo.standalone.toml  Cargo.toml  build.rs  cargo-standalone.sh
include/: js_native_api.h  unofficial_napi.h
quickjs/: CMakeLists.txt  napi_quickjs_env.cc  napi_quickjs_unofficial.cc  napi_quickjs_values.cc  patch_quickjs_ng.cmake
quickjs/internal/: napi_quickjs_env.h
quickjs/src/: js_native_api_quickjs.cc  unofficial_napi.cc
quickjs/src/internal/: quickjs_env.h
src/: cli.rs  ctx.rs  edge_napi_embedder_hooks.cc  edge_napi_embedder_hooks.h  env.rs  lib.rs  napi_bridge_init.cc  snapi.rs
src/guest/: callback.rs  napi.rs  util.rs
tests/: build-test-native.sh  build-test-wasix.sh  manifest_tests.rs  napi_native_init.cc
tests/programs/: array_test.c  hello_napi_test.c  manifest.json  napi_test_helpers.h  object_roundtrip_test.c  run_script_test.c  test_arraybuffer.c  test_bigint.c  test_bigint_words.c  test_buffer.c  test_callback.c  test_coercion.c  test_constructor.c  test_dataview.c  test_date.c  test_define_class.c  test_define_properties.c  test_error.c  test_escapable_handle_scope.c  test_external.c  test_function_call.c  test_instance_data.c  test_node_api_misc.c  test_number.c  test_object_properties.c  test_promise.c  test_reference.c  test_string.c  test_string_utf16.c  test_symbol.c  test_type_tag.c  test_typedarray.c  test_unofficial_extension.cc  test_wrap.c  typeof_test.c
v8/: CMakeLists.txt  README.md
v8/src/: js_native_api_v8.cc  unofficial_napi.cc  unofficial_napi_contextify.cc
v8/src/internal/: napi_v8_env.h
v8/tests/: CMakeLists.txt  PORTABILITY_MATRIX.md  README.md
v8/tests/runners/: test_65_unofficial_contextify.cc  test_env.h
